# Rufus-framework

./: .gitignore  FEATURE_UPGRADES_PROMPT.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.cursor/rules/: main.mdc
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: cloud.rs  comparison.rs  export.rs  findings.rs  headers.rs  mod.rs  nuclei_profiles.rs  osint.rs  phase_control.rs  programs.rs  ptsync.rs  replay.rs  scan.rs  secrets.rs  session.rs  tools.rs  triage.rs  wordlists.rs  workflows.rs
src-tauri/src/db/: assets.rs  findings.rs  migrations.rs  mod.rs  models.rs  scans.rs  store.rs
src-tauri/src/parsers/: amass.rs  dalfox.rs  dnsx.rs  feroxbuster.rs  ffuf.rs  gau.rs  httpx.rs  katana.rs  mod.rs  naabu.rs  nikto.rs  nmap.rs  nuclei.rs  sqlmap.rs  subfinder.rs  testssl.rs  trufflehog.rs  wapiti.rs  whatweb.rs
src-tauri/src/scanner/: mod.rs  runner.rs  scope.rs  tools.rs
src-tauri/wordlists/: directories.txt  parameters.txt  subdomains.txt
src/components/: LoadingScreen.tsx  SplashScreen.tsx
src/components/tabs/: TabActiveScan.tsx  TabCloud.tsx  TabComparison.tsx  TabDashboard.tsx  TabDiscovery.tsx  TabExport.tsx  TabHeaders.tsx  TabOsint.tsx  TabPenForgeExport.tsx  TabPhaseControl.tsx  TabPrograms.tsx  TabReplay.tsx  TabScanDetail.tsx  TabScope.tsx  TabSecrets.tsx  TabTakeover.tsx  TabTarget.tsx  TabTechStacks.tsx  TabVulns.tsx  TabWorkflow.tsx
src/components/ui/: RufusLogo.tsx  SplashScreen.tsx  index.tsx
src/lib/: api.ts
src/types/: index.ts
{src-tauri/src/: lib.rs
{src-tauri/src/commands/: scan.rs
(+4 files in other folders)
