[package]
name = "rufus"
version = "0.1.0"
description = "Rufus Framework — Elite Penetration Testing Platform"
authors = ["you"]
edition = "2021"

[lib]
name = "rufus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "rufus"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
roxmltree = "0.19"
regex = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
